@@ -5,7 +5,7 @@
 
 	<groupId>io.github.mtrevisan</groupId>
 	<artifactId>boxon</artifactId>
-	<version>2.1.0</version>
+	<version>2.1.1-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
 
@@ -25,8 +25,8 @@
 	</developers>
 
 	<scm>
-		<connection>scm:git:git@github.com:mtrevisan/Boxon.git</connection>
-		<developerConnection>scm:git:ssh://github.com:mtrevisan/Boxon.git</developerConnection>
+		<connection>scm:git:git://github.com/mtrevisan/Boxon.git</connection>
+		<developerConnection>scm:git:git@github.com:mtrevisan/Boxon.git</developerConnection>
 		<url>https://github.com/mtrevisan/Boxon</url>
 	</scm>
 
@@ -172,18 +172,6 @@
 							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
 							<autoReleaseAfterClose>true</autoReleaseAfterClose>
 						</configuration>
-						<dependencies>
-							<!--
-							  TODO:
-								 Remove after OSSRH-66257, NEXUS-26993 are fixed,
-								 possibly via https://github.com/sonatype/nexus-maven-plugins/pull/91
-							-->
-							<dependency>
-								<groupId>com.thoughtworks.xstream</groupId>
-								<artifactId>xstream</artifactId>
-								<version>1.4.15</version>
-							</dependency>
-						</dependencies>
 					</plugin>
 					<!-- Source -->
 					<plugin>
@@ -268,6 +256,18 @@
 					<target>${maven.compiler.source}</target>
 					<encoding>${project.build.sourceEncoding}</encoding>
 					<showDeprecation>true</showDeprecation>
+					<!--
+					  TODO:
+						 Remove after OSSRH-66257, NEXUS-26993 are fixed,
+						 possibly via https://github.com/sonatype/nexus-maven-plugins/pull/91
+					-->
+					<fork>true</fork>
+					<compilerArgs>
+						<arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
+						<arg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</arg>
+						<arg>--add-opens=java.base/java.text=ALL-UNNAMED</arg>
+						<arg>--add-opens=java.desktop/java.awt.font=ALL-UNNAMED</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<!-- Help -->
